--- a/book-visit-app/src/components/orders/OrderDetail.css
+++ b/book-visit-app/src/components/orders/OrderDetail.css
@@ -23,3 +23,10 @@ Container{
     position: absolute;
     left: -100px;
 }
+
+.order-images {
+    position: absolute;
+    bottom: 0;
+    width: 150px;
+    height: 150px;
+}
